// Vitest Snapshot v1

exports[`Badge > Badge buttonVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-ccee9194=""
>
  <div
    class="badge-demo"
    data-v-ccee9194=""
  >
    <div
      class="t-badge badge-item"
      data-v-ccee9194=""
    >
      <div
        class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
      >
        12
      </div>
      
      <button
        aria-disabled="false"
        class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
        data-v-ccee9194=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          14
          
        </span>
      </button>
      
    </div>
    <div
      class="t-badge badge-item"
      data-v-ccee9194=""
    >
      <div
        class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
      >
        99+
      </div>
      
      <button
        aria-disabled="false"
        class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
        data-v-ccee9194=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          默认max:99
          
        </span>
      </button>
      
    </div>
  </div>
  <div
    class="badge-demo"
    data-v-ccee9194=""
  >
    <div
      class="t-badge badge-item"
      data-v-ccee9194=""
    >
      <div
        class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
      >
        44+
      </div>
      
      <button
        aria-disabled="false"
        class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
        data-v-ccee9194=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          max:44
          
        </span>
      </button>
      
    </div>
    <div
      class="t-badge badge-item"
      data-v-ccee9194=""
    >
      <div
        class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
      >
        105+
      </div>
      
      <button
        aria-disabled="false"
        class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
        data-v-ccee9194=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          max:105
          
        </span>
      </button>
      
    </div>
  </div>
  <div
    class=""
    data-v-ccee9194=""
  >
    <div
      class="t-cell-group"
      data-v-ccee9194=""
    >
      <!--v-if-->
      <div
        class="t-cell-group__container"
      >
        
        <div
          class="t-cell t-cell--middle t-cell--bordered"
          data-v-ccee9194=""
          value-align="left"
        >
          <div
            class="t-cell__left-icon"
          >
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
          <div
            class="t-cell__note"
          >
            
            <span
              data-v-ccee9194=""
            >
              单行标题
            </span>
            <div
              class="t-badge list-item-badge"
              data-v-ccee9194=""
            >
              <div
                class="t-badge__inner t-badge--medium t-badge--circle"
                style="right: 10px; top: 0px;"
              >
                16
              </div>
              <!---->
            </div>
            
          </div>
          <!--v-if-->
        </div>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge > Badge mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-05bee8a6=""
>
  <h1
    class="title"
    data-v-05bee8a6=""
  >
    Badge 徽标
  </h1>
  <p
    class="summary"
    data-v-05bee8a6=""
  >
    用于告知用户，该区域的状态变化或者待处理任务的数量。
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-05bee8a6=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      01 普通徽标
    </h2>
    <!--v-if-->
    
    <div
      class="tdesign-mobile-demo"
      data-v-05bee8a6=""
      data-v-39516a6b=""
    >
      <div
        class="badge-wrap"
        data-v-39516a6b=""
      >
        <div
          class="t-badge badge-item"
          data-v-39516a6b=""
        >
          <div
            class="t-badge__inner t-badge--has-children t-badge--medium t-badge--dot"
          >
            
          </div>
          
          <button
            aria-disabled="false"
            class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
            data-v-39516a6b=""
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              按钮
              
            </span>
          </button>
          
        </div>
      </div>
      <div
        class="badge-wrap"
        data-v-39516a6b=""
      >
        <div
          class="t-cell-group"
          data-v-39516a6b=""
        >
          <!--v-if-->
          <div
            class="t-cell-group__container"
          >
            
            <div
              class="t-cell t-cell--middle t-cell--bordered"
              data-v-39516a6b=""
              value-align="left"
            >
              <div
                class="t-cell__left-icon"
              >
                <!--v-if-->
                <!--v-if-->
              </div>
              <!--v-if-->
              <div
                class="t-cell__note"
              >
                
                <span
                  data-v-39516a6b=""
                >
                  单行标题
                </span>
                <div
                  class="t-badge list-item-badge"
                  data-v-39516a6b=""
                >
                  <div
                    class="t-badge__inner t-badge--medium t-badge--dot"
                    style="right: 0px; top: 10px;"
                  >
                    
                  </div>
                  <!---->
                </div>
                
              </div>
              <!--v-if-->
            </div>
            
          </div>
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-05bee8a6=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      02 按钮徽标
    </h2>
    <!--v-if-->
    
    <div
      class="tdesign-mobile-demo"
      data-v-05bee8a6=""
      data-v-ccee9194=""
    >
      <div
        class="badge-demo"
        data-v-ccee9194=""
      >
        <div
          class="t-badge badge-item"
          data-v-ccee9194=""
        >
          <div
            class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
          >
            12
          </div>
          
          <button
            aria-disabled="false"
            class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
            data-v-ccee9194=""
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              14
              
            </span>
          </button>
          
        </div>
        <div
          class="t-badge badge-item"
          data-v-ccee9194=""
        >
          <div
            class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
          >
            99+
          </div>
          
          <button
            aria-disabled="false"
            class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
            data-v-ccee9194=""
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              默认max:99
              
            </span>
          </button>
          
        </div>
      </div>
      <div
        class="badge-demo"
        data-v-ccee9194=""
      >
        <div
          class="t-badge badge-item"
          data-v-ccee9194=""
        >
          <div
            class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
          >
            44+
          </div>
          
          <button
            aria-disabled="false"
            class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
            data-v-ccee9194=""
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              max:44
              
            </span>
          </button>
          
        </div>
        <div
          class="t-badge badge-item"
          data-v-ccee9194=""
        >
          <div
            class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
          >
            105+
          </div>
          
          <button
            aria-disabled="false"
            class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
            data-v-ccee9194=""
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              max:105
              
            </span>
          </button>
          
        </div>
      </div>
      <div
        class=""
        data-v-ccee9194=""
      >
        <div
          class="t-cell-group"
          data-v-ccee9194=""
        >
          <!--v-if-->
          <div
            class="t-cell-group__container"
          >
            
            <div
              class="t-cell t-cell--middle t-cell--bordered"
              data-v-ccee9194=""
              value-align="left"
            >
              <div
                class="t-cell__left-icon"
              >
                <!--v-if-->
                <!--v-if-->
              </div>
              <!--v-if-->
              <div
                class="t-cell__note"
              >
                
                <span
                  data-v-ccee9194=""
                >
                  单行标题
                </span>
                <div
                  class="t-badge list-item-badge"
                  data-v-ccee9194=""
                >
                  <div
                    class="t-badge__inner t-badge--medium t-badge--circle"
                    style="right: 10px; top: 0px;"
                  >
                    16
                  </div>
                  <!---->
                </div>
                
              </div>
              <!--v-if-->
            </div>
            
          </div>
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-05bee8a6=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      03 单行徽标
    </h2>
    <!--v-if-->
    
    <div
      class="tdesign-mobile-demo"
      data-v-05bee8a6=""
      data-v-732014f6=""
    >
      <div
        class="badge-demo"
        data-v-732014f6=""
      >
        <div
          class="t-badge badge-item"
          data-v-732014f6=""
        >
          <!--v-if-->
          
          <button
            aria-disabled="false"
            class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
            data-v-732014f6=""
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              NEW
              
            </span>
          </button>
          
        </div>
        <div
          class="t-badge badge-item"
          data-v-732014f6=""
        >
          <!--v-if-->
          
          <button
            aria-disabled="false"
            class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
            data-v-732014f6=""
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              省略号
              
            </span>
          </button>
          
        </div>
      </div>
      <div
        data-v-732014f6=""
      >
        <div
          class="t-cell-group"
          data-v-732014f6=""
        >
          <!--v-if-->
          <div
            class="t-cell-group__container"
          >
            
            <div
              class="t-cell t-cell--middle t-cell--bordered"
              data-v-732014f6=""
            >
              <div
                class="t-cell__left-icon"
              >
                <!--v-if-->
                <!--v-if-->
              </div>
              <div
                class="t-cell__title"
              >
                单行标题
                <!--v-if-->
                <!--v-if-->
              </div>
              <div
                class="t-cell__note"
              >
                
                <div
                  class="badge-tag-wrap"
                  data-v-732014f6=""
                >
                  <div
                    class="t-badge badge-tag"
                    data-v-732014f6=""
                  >
                    <!--v-if-->
                    NEW
                  </div>
                  <div
                    class="t-badge badge-tag"
                    data-v-732014f6=""
                  >
                    <!--v-if-->
                    NEW
                  </div>
                </div>
                
              </div>
              <!--v-if-->
            </div>
            
          </div>
        </div>
      </div>
      <div
        class="badge-demo"
        data-v-732014f6=""
      >
        <div
          class="t-badge badge-item"
          data-v-732014f6=""
        >
          <div
            class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
          >
            12
          </div>
          
          <button
            aria-disabled="false"
            class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
            data-v-732014f6=""
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              circle
              
            </span>
          </button>
          
        </div>
        <div
          class="t-badge badge-item"
          data-v-732014f6=""
        >
          <div
            class="t-badge__inner t-badge--has-children t-badge--medium t-badge--round"
          >
            12
          </div>
          
          <button
            aria-disabled="false"
            class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
            data-v-732014f6=""
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              round
              
            </span>
          </button>
          
        </div>
      </div>
      <div
        class=""
        data-v-732014f6=""
      >
        <div
          class="t-cell-group"
          data-v-732014f6=""
        >
          <div
            class="t-cell-group__title"
          >
            
            列表带徽标
            
          </div>
          <div
            class="t-cell-group__container border--top-bottom"
          >
            
            <div
              class="t-cell t-cell--middle t-cell--bordered"
              data-v-732014f6=""
            >
              <div
                class="t-cell__left-icon"
              >
                <!--v-if-->
                <!--v-if-->
              </div>
              <div
                class="t-cell__title"
              >
                单行标题
                <!--v-if-->
                <!--v-if-->
              </div>
              <div
                class="t-cell__note"
              >
                
                <div
                  class="t-badge"
                  data-v-732014f6=""
                >
                  <div
                    class="t-badge__inner t-badge--medium t-badge--dot"
                  >
                    
                  </div>
                  <!---->
                </div>
                
              </div>
              <!--v-if-->
            </div>
            <div
              class="t-cell t-cell--middle t-cell--bordered"
              data-v-732014f6=""
            >
              <div
                class="t-cell__left-icon"
              >
                <!--v-if-->
                <!--v-if-->
              </div>
              <div
                class="t-cell__title"
              >
                单行标题
                <!--v-if-->
                <!--v-if-->
              </div>
              <div
                class="t-cell__note"
              >
                
                <div
                  class="t-badge t-badge__ribbon--outer"
                  data-v-732014f6=""
                >
                  <!--v-if-->
                  <div
                    class="t-badge__inner t-badge--has-children t-badge--medium t-badge--ribbon"
                    style="right: 5px; top: 0px;"
                  >
                    NEW
                  </div>
                </div>
                
              </div>
              <!--v-if-->
            </div>
            
          </div>
        </div>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Badge > Badge normalVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-39516a6b=""
>
  <div
    class="badge-wrap"
    data-v-39516a6b=""
  >
    <div
      class="t-badge badge-item"
      data-v-39516a6b=""
    >
      <div
        class="t-badge__inner t-badge--has-children t-badge--medium t-badge--dot"
      >
        
      </div>
      
      <button
        aria-disabled="false"
        class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
        data-v-39516a6b=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          按钮
          
        </span>
      </button>
      
    </div>
  </div>
  <div
    class="badge-wrap"
    data-v-39516a6b=""
  >
    <div
      class="t-cell-group"
      data-v-39516a6b=""
    >
      <!--v-if-->
      <div
        class="t-cell-group__container"
      >
        
        <div
          class="t-cell t-cell--middle t-cell--bordered"
          data-v-39516a6b=""
          value-align="left"
        >
          <div
            class="t-cell__left-icon"
          >
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
          <div
            class="t-cell__note"
          >
            
            <span
              data-v-39516a6b=""
            >
              单行标题
            </span>
            <div
              class="t-badge list-item-badge"
              data-v-39516a6b=""
            >
              <div
                class="t-badge__inner t-badge--medium t-badge--dot"
                style="right: 0px; top: 10px;"
              >
                
              </div>
              <!---->
            </div>
            
          </div>
          <!--v-if-->
        </div>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge > Badge singleLineVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-732014f6=""
>
  <div
    class="badge-demo"
    data-v-732014f6=""
  >
    <div
      class="t-badge badge-item"
      data-v-732014f6=""
    >
      <!--v-if-->
      
      <button
        aria-disabled="false"
        class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
        data-v-732014f6=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          NEW
          
        </span>
      </button>
      
    </div>
    <div
      class="t-badge badge-item"
      data-v-732014f6=""
    >
      <!--v-if-->
      
      <button
        aria-disabled="false"
        class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
        data-v-732014f6=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          省略号
          
        </span>
      </button>
      
    </div>
  </div>
  <div
    data-v-732014f6=""
  >
    <div
      class="t-cell-group"
      data-v-732014f6=""
    >
      <!--v-if-->
      <div
        class="t-cell-group__container"
      >
        
        <div
          class="t-cell t-cell--middle t-cell--bordered"
          data-v-732014f6=""
        >
          <div
            class="t-cell__left-icon"
          >
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__title"
          >
            单行标题
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__note"
          >
            
            <div
              class="badge-tag-wrap"
              data-v-732014f6=""
            >
              <div
                class="t-badge badge-tag"
                data-v-732014f6=""
              >
                <!--v-if-->
                NEW
              </div>
              <div
                class="t-badge badge-tag"
                data-v-732014f6=""
              >
                <!--v-if-->
                NEW
              </div>
            </div>
            
          </div>
          <!--v-if-->
        </div>
        
      </div>
    </div>
  </div>
  <div
    class="badge-demo"
    data-v-732014f6=""
  >
    <div
      class="t-badge badge-item"
      data-v-732014f6=""
    >
      <div
        class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
      >
        12
      </div>
      
      <button
        aria-disabled="false"
        class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
        data-v-732014f6=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          circle
          
        </span>
      </button>
      
    </div>
    <div
      class="t-badge badge-item"
      data-v-732014f6=""
    >
      <div
        class="t-badge__inner t-badge--has-children t-badge--medium t-badge--round"
      >
        12
      </div>
      
      <button
        aria-disabled="false"
        class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
        data-v-732014f6=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          round
          
        </span>
      </button>
      
    </div>
  </div>
  <div
    class=""
    data-v-732014f6=""
  >
    <div
      class="t-cell-group"
      data-v-732014f6=""
    >
      <div
        class="t-cell-group__title"
      >
        
        列表带徽标
        
      </div>
      <div
        class="t-cell-group__container border--top-bottom"
      >
        
        <div
          class="t-cell t-cell--middle t-cell--bordered"
          data-v-732014f6=""
        >
          <div
            class="t-cell__left-icon"
          >
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__title"
          >
            单行标题
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__note"
          >
            
            <div
              class="t-badge"
              data-v-732014f6=""
            >
              <div
                class="t-badge__inner t-badge--medium t-badge--dot"
              >
                
              </div>
              <!---->
            </div>
            
          </div>
          <!--v-if-->
        </div>
        <div
          class="t-cell t-cell--middle t-cell--bordered"
          data-v-732014f6=""
        >
          <div
            class="t-cell__left-icon"
          >
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__title"
          >
            单行标题
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__note"
          >
            
            <div
              class="t-badge t-badge__ribbon--outer"
              data-v-732014f6=""
            >
              <!--v-if-->
              <div
                class="t-badge__inner t-badge--has-children t-badge--medium t-badge--ribbon"
                style="right: 5px; top: 0px;"
              >
                NEW
              </div>
            </div>
            
          </div>
          <!--v-if-->
        </div>
        
      </div>
    </div>
  </div>
</div>
`;
